# mcgill-ecse-446-realistic-image-synthesis

./: README.md  imgui.ini
A1/A1_codebase/: pyproject.toml
A1/A1_codebase/interactive/: A1.py
A1/A1_codebase/taichi_tracer/: camera.py  ray_intersector.py  sampler.py  scene_data.py  scene_data_loader.py
A1_codebase/taichi_tracer/: environment.py  renderer.py
A2/A2_codebase/taichi_tracer/: environment.py  materials.py
A3/A3_codebase/taichi_tracer/: camera.py  environment.py  ray.py  sampler.py  scene_data_loader.py
A3/A3_codebase/taichi_tracer/scene_data_dir/: specular_spheres.mtl
A3_codebase/interactive/: A2_offline.py  A3_envis.py
A3_codebase/taichi_tracer/: __init__.py  camera.py  ray_intersector.py  renderer.py  sampler.py
A3_codebase/taichi_tracer/scene_data_dir/: cornell_box.mtl
A4/A4_codebase/: pyproject.toml
A4/A4_codebase/interactive/: A4.py  A4_render_gts.py
A4/A4_codebase/taichi_tracer/: camera.py  geometry.py  ray_intersector.py  sampler.py
A4/A4_codebase/taichi_tracer/scene_data_dir/: cornell_box.mtl  veach_wall.mtl
A4_codebase/interactive/: A1_offline.py  A3.py  A3_render_gts.py
A4_codebase/taichi_tracer/: camera_controller.py  environment.py  materials.py  renderer.py  sampler.py  scene_data_loader.py
A4_codebase/taichi_tracer/scene_data_dir/: cornell_box_caustic_sphere.mtl
interactive/: A1_offline.py  A2.py  A2_offline.py
taichi_tracer/: environment.py  ray_intersector.py  renderer.py  sampler.py  scene_data_loader.py
taichi_tracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
