[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taichi_tracer"
version = "0.0.1"
requires-python = "==3.10.14"
dependencies = [
    "taichi",
    "pyQt5",
    "matplotlib",
    "numpy",
    "tqdm"
]

[tool.setuptools]
include-package-data = true
packages = ["taichi_tracer"]